--- a/files-project/pod.yaml
+++ b/files-project/pod.yaml
@@ -1,78 +1,27 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: my-application
-  namespace: my-namespace
+  name: myapp
   labels:
-    app: my-application
-    environment: production
-  annotations:
-    description: "Main application deployment"
+    name: myapp
 spec:
-  replicas: 3
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+  containers:
+  - name: myapp
+    image: nginx:latest
+    ports:
+    - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
   selector:
-    matchLabels:
-      app: my-application
-  template:
-    metadata:
-      labels:
-        app: my-application
-    spec:
-      containers:
-      - name: my-application
-        image: my-registry.com/my-application:1.0.0
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
-          name: http
-        resources:
-          requests:
-            cpu: 250m
-            memory: 512Mi
-          limits:
-            cpu: 500m
-            memory: 1Gi
-        #health probes
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 20
-          
-        env:
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: app-secrets
-              key: db-url
-        - name: API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: app-secrets
-              key: api-key
-        volumeMounts:
-        - name: config-volume
-          mountPath: /etc/config
-      volumes:
-      - name: config-volume
-        configMap:
-          name: app-config
-      imagePullSecrets:
-      - name: registry-secret
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-      nodeSelector:
-        kubernetes.io/os: linux
+    app: myapp
+  ports:
+  - port: 8080
+    targetPort: 80
+    protocol: TCP
+    type: NodePort
